<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>jqa-scanner-framework</artifactId>
        <groupId>org.jqassistant.contrib.plugin</groupId>
        <version>0.1-SNAPSHOT</version>
    </parent>

    <artifactId>antlr-to-jqassistant</artifactId>
    <version>0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>ANTLR to jQAssistant</name>
    <description>ANTLR to jQAssistant</description>
    <url>https://jqassistant.org/</url>

    <developers>
        <developer>
            <id>kev007</id>
            <name>Kevin M. Shrestha</name>
            <email>kev_shrestha@hotmail.com</email>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>GNU General Public License,v3</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.html</url>
        </license>
    </licenses>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <jqassistant.version>1.10.1</jqassistant.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
        </dependency>
        <dependency>
            <groupId>com.buschmais.xo</groupId>
            <artifactId>xo.neo4j.api</artifactId>
        </dependency>

        <dependency>
            <groupId>com.github.julianthome</groupId>
            <artifactId>inmemantlr-api</artifactId>
            <version>1.9.2</version>
        </dependency>
        <dependency>
            <groupId>com.github.javaparser</groupId>
            <artifactId>javaparser-symbol-solver-core</artifactId>
            <version>3.23.1</version>
        </dependency>

        <dependency>
            <groupId>com.buschmais.jqassistant.core</groupId>
            <artifactId>schemata</artifactId>
            <version>${jqassistant.version}</version>
        </dependency>
        <dependency>
            <groupId>com.buschmais.jqassistant.core</groupId>
            <artifactId>store</artifactId>
            <version>${jqassistant.version}</version>
        </dependency>
        <dependency>
            <groupId>com.buschmais.jqassistant.core</groupId>
            <artifactId>scanner</artifactId>
            <version>${jqassistant.version}</version>
        </dependency>
        <dependency>
            <groupId>com.buschmais.jqassistant.plugin</groupId>
            <artifactId>common</artifactId>
            <version>${jqassistant.version}</version>
        </dependency>
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>2.4.0-b180830.0359</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-runtime</artifactId>
            <version>2.4.0-b180830.0438</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-model</artifactId>
            <version>3.8.1</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${org.projectlombok.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>